@@ -21,6 +21,16 @@ def test_bc2pg():
     DB_CONNECTION.execute("drop table " + AIRPORTS_TABLE)
 
 
+def test_bc2pg_count():
+    bcdata.bc2pg(AIRPORTS_TABLE, DB_URL, count=10)
+    assert AIRPORTS_TABLE in DB_CONNECTION.tables
+    r = DB_CONNECTION.query(
+        "select airport_name from whse_imagery_and_base_maps.gsr_airports_svw"
+    )
+    assert len(r) == 10
+    DB_CONNECTION.execute("drop table " + AIRPORTS_TABLE)
+
+
 def test_bc2pg_table():
     bcdata.bc2pg(AIRPORTS_TABLE, DB_URL, table="testtable")
     assert "whse_imagery_and_base_maps.testtable" in DB_CONNECTION.tables
@@ -34,8 +44,18 @@ def test_bc2pg_schema():
 
 
 def test_bc2pg_primary_key():
-    bcdata.bc2pg(ASSESSMENTS_TABLE, DB_URL, primary_key="stream_crossing_id")
+    bcdata.bc2pg(ASSESSMENTS_TABLE, DB_URL, primary_key="stream_crossing_id", count=100)
     assert ASSESSMENTS_TABLE in DB_CONNECTION.tables
+    r = DB_CONNECTION.query("""
+        SELECT a.attname FROM pg_index i
+        JOIN pg_class c ON c.oid = i.indrelid
+        JOIN pg_attribute a ON a.attrelid = c.oid AND a.attnum = any(i.indkey)
+        JOIN pg_namespace n ON n.oid = c.relnamespace
+        WHERE relname = 'pscis_assessment_svw'
+        AND nspname = 'whse_fish'
+        AND indisprimary
+        """)
+    assert r[0][0] == 'stream_crossing_id'
     DB_CONNECTION.execute("drop table " + ASSESSMENTS_TABLE)
 
 
@@ -60,6 +80,7 @@ def test_bc2pg_schema_only():
     r = DB_CONNECTION.query("select * from whse_imagery_and_base_maps.gsr_airports_svw")
     assert len(r) == 0
     DB_CONNECTION.execute("drop table " + AIRPORTS_TABLE)
+
 
 def test_bc2pg_append():
     bcdata.bc2pg(AIRPORTS_TABLE, DB_URL, schema_only=True)
